syntax = "proto3";

option go_package = "github.com/omsurase/Blogging/auth-service/internal/pb";

package auth;

service AuthService {
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
}